--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
-    <link rel="icon" href="/lovable-uploads/b38bc0d6-e48e-4ffd-8794-1e90378c2d93.png" type="image/png">
+    <link rel="icon" href="/images/kana-logo.png" type="image/png">
   </head>
 
   <body>
