--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kana-crypto-guides</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Kana Learn & Earn - Cryptocurrency Learning Platform</title>
+    <meta name="description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
+    <meta name="author" content="Kana" />
 
-    <meta property="og:title" content="kana-crypto-guides" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Kana Learn & Earn - Cryptocurrency Learning Platform" />
+    <meta property="og:description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/banners/learn-cover.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Kana Learn & Earn" />
+    <meta name="twitter:description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
+    <meta name="twitter:image" content="/images/banners/learn-cover.jpg" />
     
     <link rel="icon" href="/images/kana-logo.png" type="image/png">
 
