feat: Enhance SEO and performance with meta tags, sitemap, and structured data

--- a/index.html
+++ b/index.html
@@ -7,16 +7,35 @@
     <meta name="description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
     <meta name="author" content="Kana" />
 
+    <!-- SEO Meta Tags -->
+    <link rel="canonical" href="https://learn.kana.trade" />
+    <meta name="keywords" content="cryptocurrency, blockchain, crypto trading, learn crypto, blockchain education, crypto basics, digital assets, crypto courses" />
+    <meta name="robots" content="index, follow" />
+
     <meta property="og:title" content="Kana Learn & Earn - Cryptocurrency Learning Platform" />
     <meta property="og:description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/banners/learn-cover.jpg" />
+    <meta property="og:site_name" content="Kana Learn" />
+    <meta property="og:url" content="https://learn.kana.trade" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Kana Learn & Earn" />
     <meta name="twitter:description" content="Learn about cryptocurrency and blockchain technology with comprehensive guides. Start your crypto learning journey with Kana Learn & Earn." />
     <meta name="twitter:image" content="/images/banners/learn-cover.jpg" />
-    
+    <meta name="twitter:site" content="@KanaLabs" />
+    <meta name="twitter:creator" content="@KanaLabs" />
+
+    <!-- Performance Hints -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="image" href="/images/kana-logo.png" />
+
+    <!-- Mobile Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="theme-color" content="#00FFF0" />
+
     <link rel="icon" href="/images/kana-logo.png" type="image/png">
 
     <script type="text/javascript">
